Update mod descriptions.

--- a/description/curseforge.html
+++ b/description/curseforge.html
@@ -15,7 +15,12 @@
                 <li>Pumpkin - made out of pumpkin.</li>
                 <li>Present - has different gift wrap textures depending on variant.</li>
                 <li>Bamboo - made out of bamboo.</li>
+                <li>Moss - made out of moss, can be bone-mealed to spread.</li>
             </ul>
+        </li>
+        <li>
+            <img src="https://gitlab.com/Ellemes/expanded-storage/-/raw/documentation/art/descriptions/png/copper_bullet_point.png"/>
+            <span> Copper: can store 45 items. (just under 2 chests worth)</span>
         </li>
         <li>
             <img src="https://gitlab.com/Ellemes/expanded-storage/-/raw/documentation/art/descriptions/png/iron_bullet_point.png"/>
@@ -63,12 +68,14 @@
     <p>Barrels like full cube chests don't have a block entity renderer, so they will result in better fps over the modelled chests if you have a bunch of them in one area, otherwise they are functionally identical to vanilla barrels just with more inventory space.</p>
 </div>
 <br />
-<h3>Mini chests</h3>
+<h3>Mini storage blocks</h3>
 <div class="spoiler">
     <img src="https://gitlab.com/Ellemes/expanded-storage/-/raw/documentation/art/descriptions/png/Mini%20chests_512.png" />
+    <img src="https://gitlab.com/Ellemes/expanded-storage/-/raw/documentation/art/descriptions/png/Iron%20Mini%20chests_512.png" />
+    <img src="https://gitlab.com/Ellemes/expanded-storage/-/raw/documentation/art/descriptions/png/Mini%20barrels_512.png" />
     <hr />
-    <p>Mini chests are chest but mini, they all can only hold 1 item and are ideal for gifting things to other players :D</p>
-    <p>Note: not all styles are craft-able and will need a Storage Mutator renamed to <strong>Sunrise</strong> or <strong>Sparrow</strong> to unlock.</p>
+    <p>Mini storage blocks are like chest and barrels but mini, they all can only hold 1 item and are ideal for gifting things to other players :D</p>
+    <p>Note: not all styles are craft-able and will need a Storage Mutator renamed to <strong>Sparrow</strong> to unlock.</p>
 </div>
 <br />
 <h3>Tools</h3>
@@ -81,7 +88,7 @@
         <li>Merge: Allows merging of two adjacent chests or old chests into a double chest.</li>
         <li>Split: Allows splitting a double chest into two single chests.</li>
         <li>Rotate: Allows rotating any storage container, note chests are limited to horizontal rotations.</li>
-        <li>Swap theme: Allows changing the theme of the storage container, this only works for themes in the same tier and only on Expanded Storage containers.</li>
+        <li>Swap theme: Allows changing the theme of the storage container, this only works for themes in the same tier.</li>
     </ul>
 </div>
 <br />
@@ -99,12 +106,16 @@
     <ul>
         <li>Mod code and texture assets - Ellemes</li>
         <li>Mod icon and other item / block renders - <a href="https://www.curseforge.com/minecraft/mc-mods/isometric-renders">Isometric Renderer mod</a></li>
-        <li>Bamboo chest textures - Yoghurt4C</li>
         <li>Pumpkin chest textures - Yoghurt4C, these textures, for the modelled chest only, are public domain.</li>
         <li>Christmas chest textures - Yoghurt4C, these textures, for the modelled chest only, are public domain.</li>
+        <li>Bamboo chest textures - Yoghurt4C</li>
+        <li>Moss chest textures - ClockworkVulpine</li>
         <li>Previous mod icon - Hambaka</li>
         <li>Russian translations - Romz24</li>
         <li>French translations - Wombhy</li>
+        <li>Dutch translations - ClockworkVulpine</li>
+        <li>Italian translations - <a href="https://gitlab.com/maicol07">Maicol</a></li>
+        <li>Brazilian translations - <a href="https://github.com/seriousfreezing">SeriousFreezing</a></li>
     </ul>
     <br />
     <p>Older Version:</p>
